--- a/sagely-frontend/src/components/lessonCard/lessonCard.css
+++ b/sagely-frontend/src/components/lessonCard/lessonCard.css
@@ -2,6 +2,6 @@
   background-color: white;
 }
 
-.ant-descriptions-item-label {
-  background-color: lightgray;
+.ant-descriptions.ant-descriptions-bordered .ant-descriptions-item-label {
+  background-color: rgb(181, 182, 184);
 }
