--- a/sagely-frontend/src/pages/lesson/lesson.css
+++ b/sagely-frontend/src/pages/lesson/lesson.css
@@ -1,3 +1,10 @@
 .main-container {
   padding: 20px;
 }
+
+.descriptionContainer {
+  padding: 10px;
+  margin-top: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
